# ivykis

./: .gitignore  AUTHORS  DEDICATION  Makefile  Makefile.am  Makefile.in  autogen.sh  balabit-unix-build.sh  config.h.in  configure  configure.ac  configure.gnu  ivykis.spec  ivykis.spec.in  libivykis.posix.ver  libivykis.ver  libivykis.win32.ver
contrib/: 00README.txt  Makefile.am  Makefile.in
contrib/iv_getaddrinfo/: Makefile.am  Makefile.in  iv_getaddrinfo.c  iv_getaddrinfo.h  test.c
contrib/iv_inotify/: Makefile  Makefile.am  Makefile.in  example.c  iv_inotify.3  iv_inotify.c  iv_inotify.h
contrib/iv_mb_bcast/: Makefile.am  bench.c  iv_mb_bcast.h  iv_mb_bcast_sched.c  iv_mb_bcast_signal_atomic.c  iv_mb_bcast_signal_atomic_fd.c  iv_mb_bcast_signal_atomic_futex.c  iv_mb_bcast_signal_fd.c  iv_mb_bcast_signal_tls.c  iv_mb_bcast_sigqueue_atomic.c  iv_mb_bcast_sigqueue_atomic_fd.c  iv_mb_bcast_sigqueue_atomic_futex.c  iv_mb_bcast_sigqueue_fd.c  test.c
contrib/iv_mcast_group/: Makefile.in
contrib/iv_openssl/: Makefile.am  Makefile.in  echo.c  iv_openssl.c  iv_openssl.h  mkkeycert  stress.c
contrib/iv_urcu_call/: Makefile.am  Makefile.in  iv_urcu_call.c  iv_urcu_call.h  test.c
contrib/kojines/: 00README.txt  Makefile  Makefile.am  Makefile.in  kojines.c  kojines.h  main.c
contrib/splice/: Makefile  Makefile.am  Makefile.in  discard.c  echo.c
debian/: changelog  control
doc/: Makefile  iv_examples.3  iv_fd.3  iv_fd_set_handler_out.3  iv_init.3  iv_main.3  iv_quit.3  iv_task.3  iv_timer.3  iv_unregister_timer.3  iv_validate_now.3  iv_wrappers.3  ivykis.3
lib/: Makefile  Makefile.am  Makefile.in  iv_avl.c  iv_fd.c  iv_main.c  iv_method_dev_poll.c  iv_method_epoll.c  iv_method_kqueue.c  iv_method_poll.c  iv_method_port.c  iv_method_select.c  iv_private.h  iv_task.c  iv_thr.h  iv_timer.c  iv_tls.c
lib/include/: iv.h  iv.h.in  iv_avl.h  iv_compat.h  iv_list.h  iv_tls.h
lib/man3/: Makefile  Makefile.am  Makefile.in  iv_deinit.3  iv_examples.3  iv_fd.3  iv_init.3  iv_main.3  iv_task.3  iv_task_unregister.3  iv_time.3  iv_timer.3  ivykis.3
lib/test/: Makefile  Makefile.am  Makefile.in  avl.c  client.c  connectfail.c  connectreset.c  null.c  server.c  timer.c  timer_rat.c
man3/: Makefile.am  Makefile.in  iv_event.3  iv_event_raw.3  iv_examples.3  iv_fatal.3  iv_fd.3  iv_fd_pump.3  iv_init.3  iv_inotify.3  iv_popen.3  iv_popen_request_submit.3  iv_quit.3  iv_set_fatal_msg_handler.3  iv_signal.3  iv_signal_unregister.3  iv_task.3  iv_thread.3  iv_thread_create.3  iv_time.3  iv_timer.3  iv_tls.3  iv_tls_user_register.3  iv_wait.3  iv_work.3  ivykis.3
misc/: Makefile.am  Makefile.in  ivykis-config  ivykis-modules-config  ivykis-modules.pc.in  ivykis.pc.in  libivykis.pc  libivykis.pc.in
modules/: Makefile  Makefile.am  Makefile.in  iv_event.c  iv_event_raw.c  iv_fd_pump.c  iv_inotify.c  iv_popen.c  iv_signal.c  iv_thread.c  iv_wait.c  iv_work.c  spinlock.h
modules/include/: iv_event.h  iv_event_raw.h  iv_fd_pump.h  iv_inotify.h  iv_popen.h  iv_signal.h  iv_thread.h  iv_wait.h  iv_work.h
modules/man3/: IV_FD_PUMP_INIT.3  Makefile  Makefile.am  Makefile.in  iv_event.3  iv_event_post.3  iv_event_raw.3  iv_event_raw_post.3  iv_inotify.3  iv_inotify_unregister.3  iv_popen.3  iv_signal.3  iv_wait.3  iv_wait_interest_unregister.3  iv_work.3  iv_work_pool_put.3
modules/test/: Makefile  Makefile.am  Makefile.in  iv_event_raw_test.c  iv_event_test.c  iv_fd_pump_discard.c  iv_fd_pump_echo.c  iv_inotify_test.c  iv_popen_test.c  iv_signal_child_test.c  iv_signal_test.c  iv_thread_test.c  iv_wait_test.c  iv_work_test.c
src/: Makefile  Makefile.am  Makefile.in  epoll.h  eventfd-linux.h  eventfd-stub.h  eventpoll.h  iv.h  iv_avl.c  iv_avl.h  iv_event.c  iv_event_private.h  iv_event_raw_posix.c  iv_event_raw_win32.c  iv_fatal.c  iv_fd.c  iv_fd_compat.h  iv_fd_dev_poll.c  iv_fd_epoll.c  iv_fd_kqueue.c  iv_fd_poll.c  iv_fd_poll_mt.c  iv_fd_port.c  iv_fd_private.h  iv_fd_pump.c  iv_fd_select.c  iv_fd_uring.c  iv_handle.c  iv_handle_apc.c  iv_handle_me.c  iv_handle_mp.c  iv_handle_private.h  iv_handle_simple.c  iv_inotify.c  iv_list.h  iv_main.c  iv_main_posix.c  iv_main_win32.c  iv_method_dev_epoll.c  iv_method_dev_poll.c  (+34 more)
src/include/: iv.h.in  iv_avl.h  iv_event.h  iv_event_raw.h  iv_fd_pump.h  iv_list.h  iv_signal.h  iv_sock.h  iv_thread.h  iv_tls.h  iv_uring.h  iv_wait.h  iv_work.h  iv_wsa_socket.h
test/: Makefile  Makefile.am  Makefile.in  avl.c  client.c  connectfail.c  connectreset.c  event_unregister_bug.c  handle.c  iv_event_bench.c  iv_event_raw_bench.c  iv_event_raw_test.c  iv_event_test.c  iv_fd_pump_discard.c  iv_fd_pump_echo.c  iv_inotify_test.c  iv_popen_test.c  iv_signal_bench.c  iv_signal_child_test.c  iv_signal_test.c  iv_signal_thread_test.c  iv_thread_test.c  iv_wait_test.c  iv_work_test.c  iv_wsa_socket_test.c  null.c  nullclose.c  server.c  spliceecho.c  struct_sizes.c  timer.c  timer_fairness.c  timer_fairness_bug.c  timer_order.c  timer_past.c  timer_rat.c  timer_zero.c  uring_cat.c  uring_nop.c  uring_wait.c
test.mt/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  handle.c  iv_event_bench.c  iv_event_test.c  iv_thread_test.c  iv_wait_test.c  iv_work_test.c  server.c
tgz2build/: libivykis-dev.files  libivykis.files  rules
